--- a/lime/resources/css/menu.css
+++ b/lime/resources/css/menu.css
@@ -1,6 +1,36 @@
 @charset"utf-8";
+#header{
+text-align: right;
+}
+
+#userimage{
+    text-align: center;
+    }
+
+#menu{
+    text-align: center;
+}
+
+
+#attachment{
+    display: inline-block;
+    text-align: center;
+    background-color:aqua;
+    padding: 10px;
+}
+
+
 
 #allergies{
     background-color: cornsilk;
     width: 505px;
+}
+
+/*フッダー編集*/
+#footer{
+    width: 100%;
+	padding: 3px 0 3px 0;
+	background-color:darkorange;
+	font-weight: bold;
+	text-align: left;
 }
