--- a/lime/public/css/login.css
+++ b/lime/public/css/login.css
@@ -8,4 +8,13 @@ body{
     text-align: center;   
 }
 
-
+.input-wrap{
+    position: relative;
+}
+     
+.toggle-pass{
+    position:absolute;
+    top:50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
