--- a/lime/resources/css/menu.css
+++ b/lime/resources/css/menu.css
@@ -7,10 +7,122 @@ body{
    background-position: center center;   /* 縦横中央 */
 }
 
-#header{
-text-align: right;
-}
-
+/*ハンバーガーライン編集*/
+.wrapper {
+    height: 100%;
+    overflow-x: hidden;
+    position: relative;
+  }
+  .overlay {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    opacity: 0;
+    transition: opacity .5s;
+  }
+  .overlay.open {
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+  }
+  main {
+    height: 100%;
+    min-height: 100vh;
+    padding: 0 50px;
+    background-color: #eee;
+    transition: all .5s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  main.open {
+    transform: translateX(-250px);
+  }
+  main h1 {
+    text-align: center;
+    font-weight: 500;
+  }
+  main p {
+    text-align: center;
+  }
+  .menu-trigger {
+    display: inline-block;
+    width: 36px;
+    height: 28px;
+    vertical-align: middle;
+    cursor: pointer;
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    z-index: 100;
+  }
+  .menu-trigger span {
+    display: inline-block;
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    transition: all .5s;
+  }
+  .menu-trigger.active span {
+    background-color: #fff;
+  }
+  .menu-trigger span:nth-of-type(1) {
+    top: 0;
+  }
+  .menu-trigger.active span:nth-of-type(1) {
+    transform: translateY(12px) rotate(-45deg);
+  }
+  .menu-trigger span:nth-of-type(2) {
+    top: 12px;
+  }
+  .menu-trigger.active span:nth-of-type(2) {
+    opacity: 0;
+  }
+  .menu-trigger span:nth-of-type(3) {
+    bottom: 0;
+  }
+  .menu-trigger.active span:nth-of-type(3) {
+    transform: translateY(-12px) rotate(45deg);
+  }
+  
+  nav {
+    width: 250px;
+    height: 100%;
+    padding-top: 100px;
+    background-color: rgb(16, 69, 153, 0.8);
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    transform: translate(250px);
+    transition: all .5s;
+  }
+  nav.open {
+    transform: translateZ(0);
+  }
+  nav li {
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 #userimage{
     text-align: center;
     }
@@ -45,6 +157,7 @@ text-align: right;
 	background-color: cornsilk;
     width: 50px;
     height: 50px;
+    margin:0px;
     background-size: contain;
 }
 
@@ -59,7 +172,7 @@ text-align: right;
 	height: 100%;
 	position: absolute;
 	font-size: 14px;
-	color: #ffffff;
+	color: #bbff00;
 	top: 30%;
 	opacity: 0;
 	-webkit-transition:	all 0.2s ease;
