--- a/lime/public/css/home.css
+++ b/lime/public/css/home.css
@@ -81,13 +81,9 @@ body{
     top: 30px;
     right: 30px;
     z-index: 100;
-  /*   transform: translateX(0);
-    transition: transform .5s;
-   */}
-  /* .menu-trigger.active {
-    transform: translateX(-250px);
   }
-   */.menu-trigger span {
+ 
+  .menu-trigger span {
     display: inline-block;
     box-sizing: border-box;
     position: absolute;
