--- a/lime/resources/css/home.css
+++ b/lime/resources/css/home.css
@@ -4,7 +4,7 @@
 body{
     margin:0;
     padding:0;
-    background:rgba(200,255,200,0.5);
+    background-color:#fff;
 }
 
 
@@ -20,7 +20,25 @@ body{
     display: flex;
 }
 
-.explanation{
+.title {/*親div*/
+  position: relative;
+  }
+
+.title p {
+  position: absolute;
+  color: white;/*文字は白に*/
+  font-weight: bold; /*太字に*/
+  font-size: 2em;/*サイズ2倍*/
+  font-family :Quicksand, sans-serif;/*Google Font*/
+  top: 35%;
+  left: 0;
+  }
+
+.title img {
+  width: 100%;
+  }
+
+.titleion{
     text-align: center;
 }
 
@@ -32,7 +50,7 @@ body{
     overflow-x: hidden;
     position: relative;
   }
-  .overlay {
+  /* .overlay {
     content: "";
     display: block;
     width: 0;
@@ -44,7 +62,7 @@ body{
     z-index: 2;
     opacity: 0;
     transition: opacity .5s;
-  }
+  } */
   .overlay.open {
     width: 100%;
     height: 100%;
@@ -93,7 +111,7 @@ body{
     transition: all .5s;
   }
   .menu-trigger.active span {
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
   }
   .menu-trigger span:nth-of-type(1) {
     top: 0;
@@ -116,9 +134,9 @@ body{
   
   nav {
     width: 250px;
-    height: 100%;
+    height: 50%;
     padding-top: 100px;
-    background-color: rgb(16, 69, 153, 0.8);
+    background-color: rgba(255, 255, 255, 0.8);
     position: fixed;
     top: 0;
     right: 0;
