--- a/lime/public/css/menu.css
+++ b/lime/public/css/menu.css
@@ -124,43 +124,8 @@ ul {
   padding: 0;
 }
 
-.dialog {
-  overflow: hidden;
-  position: absolute;
-  top: 30%;
-  height: auto;
-  width: 300px;
-  display: none;
-  border:1px solid #aaa;
-  z-index:1000;
-}
-.dialog-header {
-  border: 1px solid #aaa;
-  background: #cccccc;
-  color: #222222;
-  font-weight: bold;
-  overflow: hidden;
-  padding:5px;
-}
-.dialog-title {
-  float: left;
-}
-.dialog-close {
-  float: right;
-  border: 1px solid #d3d3d3;
-  background: #e6e6e6;
-  font-weight: normal;
-  color: #555555;
-}
-.dialog-content {
-  position: relative;
-  border: 0;
-  padding: .5em 1em;
-  background: #fff;
-  overflow: auto;
-  width: auto;
-  height: auto;
-}
+
+
 
 /* トップ画像 */
 #userimage{
@@ -360,4 +325,30 @@ ul {
 	background-color:darkorange;
 	font-weight: bold;
 	text-align: left;
+}
+
+#menuinput{
+  width: 100%;
+  height: 100%;
+  display: none;
+  position:fixed;
+  z-index: 10;
+  top:0;
+  left:0;
+}
+#background{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(30,30,30,0.9);
+}
+.dialog{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  background-color: #bbff00;
+  overflow: auto;
+  border-radius: 4px;
+  width: 350px;
+  max-height: 98%;
 }
