--- a/lime/public/css/menu.css
+++ b/lime/public/css/menu.css
@@ -327,6 +327,7 @@ ul {
 	text-align: left;
 }
 
+/* メニュー編集欄 */
 #menuinput{
   width: 100%;
   height: 100%;
@@ -351,4 +352,19 @@ ul {
   border-radius: 4px;
   width: 350px;
   max-height: 98%;
+}
+
+/* メニュー編集：メニュー画像 */
+label {
+  position: relative;
+  background: url(../images/x.jpg);
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  padding: 15px 30px;
+  margin: 0 10px 0 0;
+  display: inline-block;
+}
+label input {
+  display: none;
 }
