--- a/lime/resources/css/home.css
+++ b/lime/resources/css/home.css
@@ -12,7 +12,7 @@ body{
 
 /*ヘッダー編集*/
 #header{
-    background-color: white;
+    /* background-color: white; */
     width: 100%;
     margin: 0;
     padding: 0;
@@ -46,126 +46,112 @@ body{
 
 }
 
+/* ハンバーガーメニュー */
+#hamburger .btn-gNav{
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 30px;
+  height: 24px;
+  z-index: 3;
+  box-sizing: border-box;
+  cursor: pointer;
+  -webkit-transition: all 400ms;
+  transition: all 400ms;
+}
+
+#hamburger .btn-gNav span{
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background: #666;
+  border-radius: 10px;
+  -webkit-transition: all 400ms;
+  transition: all 400ms;
+}
+#hamburger .btn-gNav span:nth-child(1) {
+  top:0;
+}
+#hamburger .btn-gNav span:nth-child(2) {
+  top:10px;
+}
+#hamburger .btn-gNav span:nth-child(3) {
+  top:20px;
+}
+#hamburger .btn-gNav.open span:nth-child(1){
+  background: #fff;
+  top: 6px;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform   : rotate(-45deg);
+  transform        : rotate(-45deg);
+}
+#hamburger .btn-gNav.open span:nth-child(2),#hamburger .btn-gNav.open span:nth-child(3){
+  top: 6px;
+  background :#fff;
+  -webkit-transform: rotate(45deg);
+  -moz-transform   : rotate(45deg);
+  transform        : rotate(45deg);
+}
+#gNav{
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  height: 100%;
+  background: #444;
+  font-size: 16px;
+  box-sizing: border-box;
+  z-index: 2;
+  padding-top: 50px;
+  transition: .3s;
+}
+#gNav.open{
+  right: 0px;
+}
+#gNav .gNav-menu{
+  width: 100%;
+  height:100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  /*justify-content: center;*/
+}
+#gNav .gNav-menu li{
+  display: block;
+  padding : 20px 30px;
+}
+#gNav .gNav-menu li a{
+  color: #ddd;
+  text-decoration: none;
+}
 
 
-/*ハンバーガーライン編集*/
-.wrapper {
-    height: 100%;
-    overflow-x: hidden;
-    position: relative;
+@media screen and (min-width: 600px){
+  .btn-gNav{
+    display: none;
   }
-  /* .overlay {
-    content: "";
-    display: block;
-    width: 0;
-    height: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    opacity: 0;
-    transition: opacity .5s;
-  } */
-  .overlay.open {
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-  }
-  main {
-    height: 100%;
-    min-height: 100vh;
-    padding: 0 50px;
-    background-color: #eee;
-    transition: all .5s;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  main.open {
-    transform: translateX(-250px);
-  }
-  main h1 {
-    text-align: center;
-    font-weight: 500;
-  }
-  main p {
-    text-align: center;
-  }
-  .menu-trigger {
-    background-color: #1FF;
-    display: inline-block;
-    width: 36px;
-    height: 28px;
-    vertical-align: middle;
-    cursor: pointer;
-    position: fixed;
-    top: 30px;
-    right: 30px;
-    z-index: 100;
-  }
- 
-  .menu-trigger span {
-    display: inline-block;
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: #000;
-    transition: all .5s;
-  }
-  .menu-trigger.active span {
-    background-color: rgb(0, 0, 0);
-  }
-  .menu-trigger span:nth-of-type(1) {
-    top: 0;
-  }
-  .menu-trigger.active span:nth-of-type(1) {
-    transform: translateY(12px) rotate(-45deg);
-  }
-  .menu-trigger span:nth-of-type(2) {
-    top: 12px;
-  }
-  .menu-trigger.active span:nth-of-type(2) {
-    opacity: 0;
-  }
-  .menu-trigger span:nth-of-type(3) {
-    bottom: 0;
-  }
-  .menu-trigger.active span:nth-of-type(3) {
-    transform: translateY(-12px) rotate(45deg);
-  }
-  
-  nav {
-    width: 250px;
-    height: 50%;
-    padding-top: 100px;
-    background-color: rgba(255, 255, 255, 0.8);
+  #gNav{
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 10;
-    transform: translate(250px);
-    transition: all .5s;
+    height: 50px;
   }
-  nav.open {
-    transform: translateZ(0);
+  #gNav .gNav-menu{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding-left: 50px;
   }
-  nav li {
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
+  #gNav .gNav-menu li{
+    padding-top: 5px;
   }
+}
+
   
-  * {
-    box-sizing: border-box;
-  }
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
 
 
 /*タイトル編集*/
