ホーム画面の編集

--- a/lime/resources/css/home.css
+++ b/lime/resources/css/home.css
@@ -19,28 +19,41 @@ body{
     /* position: fixed; */
     /* display: flex; */
 }
+/* 説明文 */
+.explanation{
+  text-align: center;
+}
 
-.title {/*親div*/
+/* タイトル編集 */
+.example {
   position: relative;
   }
 
-.title p {
+.example p {/*pタグを画像の左側に*/
   position: absolute;
-  color: white;/*文字は白に*/
-  font-weight: bold; /*太字に*/
-  font-size: 2em;/*サイズ2倍*/
-  font-family :Quicksand, sans-serif;/*Google Font*/
-  top: 35%;
-  left: 0;
+  top: 45%;
+  left: 20%;
+  -ms-transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  margin:0;/*余計な隙間を除く*/
+  padding:0;/*余計な隙間を除く*/
+  color: white;/*文字色*/
+  font-size: 25px;/*文字サイズ*/
+  text-align:center;/*pタグ内で更に中央寄せ*/
+  font-family: 'Quicksand',sans-serif;
   }
 
-.title img {
+.example p .fa {/*アイコンに対して*/
+  display:block;/*前後に改行*/
+  padding-bottom:10px;/*文字との隙間*/
+  font-size: 0.5em;/*文字の0.5倍のサイズに*/
+  color: rgb(255, 255, 255);
+  }
+
+.example img {
   width: 100%;
   }
-
-.titleion{
-    text-align: center;
-}
 
 
 /* ハンバーガーメニュー */
