--- a/lime/public/css/menu.css
+++ b/lime/public/css/menu.css
@@ -308,9 +308,9 @@ ul {
 
 /*フッダー編集*/
 #footer{
-    width: 100%;
+  width: 100%;
 	padding: 3px 0 3px 0;
-	background-color:darkorange;
+	background-color: rgba(255, 254, 255, 0.5);
 	font-weight: bold;
 	text-align: left;
 }
