--- a/lime/resources/css/home.css
+++ b/lime/resources/css/home.css
@@ -55,114 +55,7 @@ body{
   width: 100%;
   }
 
-
-/* ハンバーガーメニュー */
-#hamburger .btn-gNav{
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  width: 30px;
-  height: 24px;
-  z-index: 3;
-  box-sizing: border-box;
-  cursor: pointer;
-  -webkit-transition: all 400ms;
-  transition: all 400ms;
-}
-
-#hamburger .btn-gNav span{
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  background: #666;
-  border-radius: 10px;
-  -webkit-transition: all 400ms;
-  transition: all 400ms;
-}
-#hamburger .btn-gNav span:nth-child(1) {
-  top:0;
-}
-#hamburger .btn-gNav span:nth-child(2) {
-  top:10px;
-}
-#hamburger .btn-gNav span:nth-child(3) {
-  top:20px;
-}
-#hamburger .btn-gNav.open span:nth-child(1){
-  background: #fff;
-  top: 6px;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform   : rotate(-45deg);
-  transform        : rotate(-45deg);
-}
-#hamburger .btn-gNav.open span:nth-child(2),#hamburger .btn-gNav.open span:nth-child(3){
-  top: 6px;
-  background :#fff;
-  -webkit-transform: rotate(45deg);
-  -moz-transform   : rotate(45deg);
-  transform        : rotate(45deg);
-}
-#gNav{
-  position: fixed;
-  top: 0;
-  right: -100%;
-  width: 100%;
-  height: 100%;
-  background: #444;
-  font-size: 16px;
-  box-sizing: border-box;
-  z-index: 2;
-  padding-top: 50px;
-  transition: .3s;
-}
-#gNav.open{
-  right: 0px;
-}
-#gNav .gNav-menu{
-  width: 100%;
-  height:100%;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  /*justify-content: center;*/
-}
-#gNav .gNav-menu li{
-  display: block;
-  padding : 20px 30px;
-}
-#gNav .gNav-menu li a{
-  color: #ddd;
-  text-decoration: none;
-}
-
-
-@media screen and (min-width: 600px){
-  .btn-gNav{
-    display: none;
-  }
-  #gNav{
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 50px;
-  }
-  #gNav .gNav-menu{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    padding-left: 50px;
-  }
-  #gNav .gNav-menu li{
-    padding-top: 5px;
-  }
-}
-
-  
-
+  /* ハンバーガーライン */
 
 /*タイトル編集*/
 .icon{
