--- a/lime/public/css/home.css
+++ b/lime/public/css/home.css
@@ -11,15 +11,120 @@ body{
 
 
 /*ヘッダー編集*/
-#header{
-    /* background-color: white; */
+ /* ハンバーガーライン */
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+  }
+  
+  header{
+    top: 0px;
+    position: fixed;
     width: 100%;
-    margin: 0;
-    padding: 0;
-    /* position: fixed; */
-    /* display: flex; */
+    height: 70px;
+    line-height: 60px; /*文字の高さ調整*/
+    background:rgba(255, 254, 254, 0.7);
+  }
+  
+  a{
+    /* color: #e22727;
+    display: block; */
+    text-decoration: none;
+  }
+  
+  ul li{
+    list-style: none;
+    width:100px;
+  }
+  
+  .menu{
+    display: flex;
+    justify-content: space-around;
+    max-width: 980px;
+    margin:0 auto;
+  }
+  
+  @media screen and (max-width: 768px){
+  
+  .menu{
+    display: block;
+  }
+  header nav{
+    position: fixed;
+    width: 300px;
+    top: 0;
+    right: -300px;
+    background-color: rgba(33,33,33,.9);
+    height: 100%;
+    padding-top: 60px;
+  }
+
+header nav ul li{
+  width: 100%;
 }
-/* 説明文 */
+
+  header nav ul li a{
+    color: #ffffff;
+    padding-left: 20px;
+  }
+
+  header .btn-gnavi{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 30px;
+    height: 24px;
+    z-index: 3;
+    cursor: pointer;
+    transition: all 400ms;
+    -webkit-transition:all 400ms;
+  }
+
+  header .btn-gnavi span {
+      position: absolute;
+      width: 30px;
+      height: 4px;
+      background: #666;
+      border-radius: 10px;
+      transition: all 400ms
+  }
+
+  header .btn-gnavi span:nth-child(1){
+    top: 0;
+  }
+
+  header .btn-gnavi span:nth-child(2){
+    top: 10px;
+  }
+
+  header .btn-gnavi span:nth-child(3){
+    top: 20px;
+  }
+
+  header .btn-gnavi.hb-open{
+    transform: rotate(180deg);
+    -webkit-transform:rotate(180deg);
+  }
+
+  header .btn-gnavi.hb-open span{
+    background: #fff;
+  }
+
+  header .btn-gnavi.hb-open span:nth-child(1){
+    width: 24px;
+    transform: translate(-7px,17px) rotate(45deg);
+    -webkit-transform: translate(-7px,17px) rotate(45deg);
+  }
+
+  header .btn-gnavi.hb-open span:nth-child(3){
+    width: 24px;
+    transform: translate(-7px,-17px) rotate(-45deg);
+    -webkit-transform: translate(-7px,-17px) rotate(-45deg);
+  }
+}
+
+/* 説明全体 */
 .explanation{
   text-align: center;
 }
@@ -53,17 +158,40 @@ body{
   width: 100%;
   }
 
-  /* ハンバーガーライン */
+  /* 説明編集 */
+.descriptio {
+    position: relative;
+    }
+  
+  .descriptio p {/*pタグを画像の左側に*/
+    position: absolute;
+    top: 45%;
+    left: 20%;
+    transform: translate(-50%,-50%);
+    margin:0;/*余計な隙間を除く*/
+    padding:0;/*余計な隙間を除く*/
+    color: white;/*文字色*/
+    font-size: 25px;/*文字サイズ*/
+    text-align:center;/*pタグ内で更に中央寄せ*/
+    font-family: 'Quicksand',sans-serif;
+    }
+  
+  .descriptio p .fa {/*アイコンに対して*/
+    display:block;/*前後に改行*/
+    padding-bottom:10px;/*文字との隙間*/
+    font-size: 0.5em;/*文字の0.5倍のサイズに*/
+    color: rgb(255, 255, 255);
+    }
+  
+  .descriptio img {
+    width: 100%;
+    }
+
+ 
 
 /*タイトル編集*/
 .icon{
     width:180px ;
-}
-
-/*サンプル画像編集*/
-.sample1 img{
-width: 100%;
-
 }
 
 /*ボックスの編集*/
@@ -76,19 +204,55 @@ width: 100%;
     width: 100%
 }
 
-/*機能画像編集*/
-#function img{
-    width: 10%;
+/*機能紹介*/
+#function {
+    background-color: rgb(243, 242, 188);
+    width: 100%;
+    height: 100%;
 }
+.horizontal-list {
+    overflow-x: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .Introduction {
+    /* 横スクロール用 */
+    display: inline-block;
+    width: 90%;
+
+    /* 見た目調整 */
+    height: 150px;
+    margin: 16px;
+    font-size: 30px;
+  }
+  #Introductionimg{
+  width: 1000px;
+  height:600px;
+  }
+  #procedure{
+    background-color: rgb(185, 243, 118);
+    width:100%;
+    height:800px;   
+    font-size: 30px;
+}
+
 
 /*フッダー編集*/
 #footer {
 	width: 100%;
+    height:270px;
 	padding: 3px 0 3px 0;
 	background-color: rgba(199, 195, 195, 0.5);
 	font-weight: bold;
 	text-align: left;
 }
+.twitter{
+    float:right;
+    margin-right: 100px;
+}
+    
+
 
 /*パスワードの表示・非表示*/
 .input-wrap{
@@ -138,4 +302,4 @@ width: 100%;
 	z-index: 9999;
 	width: 280px;
 }
-
+  
